Tidy, comments